# storyboard-cca

./: .database  .dockerignore  .gitattributes  .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  environment.yaml  guinicorn.conf.py  gunicorn.conf.py  prod_environment.yaml  pyproject.toml  run_server.bat  run_server.sh
src/: debug_entry_point.py
src/storyboard_cca/: .app  .database  __init__.py  app.py  logging.py  main.py  templates.py
src/storyboard_cca/assets/: jump.js  parallax.css  robots.txt  scrollbars.css
src/storyboard_cca/data/: __init__.py  bootstrap_database.py  cca_metadata.toml
src/storyboard_cca/database/: storyboard_cca.recipe.sql
src/storyboard_cca/errors/: 404.jinja
src/storyboard_cca/pages/: __init__.py  adaptations.py  base.jinja  climate_change.py  home.jinja  home.py  not_found_404.py  placeholder.jinja  project.py  routes.py  testing.jinja
src/storyboard_cca/pages/home/: adaptations.jinja  hydrology.jinja  hydrology_table.jinja  introduction.jinja  page.jinja
src/storyboard_cca/pages/south_of_delta_storage/: page.jinja
src/storyboard_cca/storyboard/: __init__.py  body.py  brand.py  cards.py  containers.py  external.py  features.py  images.py  jump.py  layout.py  markdown.py  nav.py  obj_to_html.py  style.py  table.py  tables.py  text.py  typing.py
src/storyboard_cca/widgets/: __init__.py  body.py  brand.py  cards.py  features.py  layout.py  markdown.py  placeholders.py  plots.py
src/storycharts_cca/: __init__.py  logging.py  main.py
src/storycharts_cca/pages/: base.jinja  home.jinja
(+64 files in other folders)
